--- a/_data/programming_timeline.yml
+++ b/_data/programming_timeline.yml
@@ -44,6 +44,6 @@ items:
     title: "Graduate Teaching Assistant"
     description: "Supported courses in **Operating Systems**, **Human-Computer Interaction**, and **Applied Cryptography**, assisting with grading, office hours, and technical guidance."
 
-  - year: "2025"
+  - year: "2025-Now"
     title: "Independent Work and Self-Learning"
     description: "Continually learning Rust, DevOps, etc. and experimenting with new projects."
